--- a/CustomTattooDesign_MobileApp/src/app/components/login/login.component.html
+++ b/CustomTattooDesign_MobileApp/src/app/components/login/login.component.html
@@ -1,22 +1,20 @@
 <img src="../../../assets/logo.png" alt="Logo">
 
 <ion-card>
-
   <ion-card-header>
     <ion-card-title>Login</ion-card-title>
   </ion-card-header>
-
   <ion-card-content>
-
+    
     <span>Email</span>
-    <ion-input> </ion-input> <br>
+    <ion-input [(ngModel)]='username' ngDefaultControl></ion-input>
 
     <span>Password</span>
-    <ion-input></ion-input>
+    <ion-input [(ngModel)]='password' type='password' ngDefaultControl></ion-input>
 
-    <input type="checkbox" /> <span>Remeber Me</span> <br>
+    <input type="checkbox"/> <span> Remember Me</span> <br>
 
-    <ion-button>LOG IN</ion-button> <br><br>
+    <ion-button (click)='login()'>LOG IN</ion-button> <br><br>
 
     <a href>Forgot your password?</a> <br>
     <a href>New? Request for a user</a>
