Unclaimed page front-end done

--- a/CustomTattooDesign_MobileApp/src/app/pages/artist-landing/artist-landing.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/artist-landing/artist-landing.page.html
@@ -1,9 +1,14 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Landing Page</ion-title>
+    <ion-title>Designer Dashboard</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <h1>Login Successful</h1>
+
+  <ion-button expand="block">Unclaimed Jobs</ion-button> <br>
+  <ion-button expand="block">Your Jobs</ion-button> <br>
+
+  <app-logout></app-logout>
+
 </ion-content>
