--- a/CustomTattooDesign_MobileApp/src/app/pages/home/home.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/home/home.page.html
@@ -1,9 +1,14 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>home</ion-title>
+    <ion-title>Home</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+  <h1>Welcome to Custom Tattoo Design</h1>
+  <ion-button expand="block">Artist Login</ion-button> <br>
+  <ion-button expand="block">Customer Login</ion-button> <br>
+  <ion-button expand="block">Request a Design</ion-button>
 
 </ion-content>
