loginAPIService, unclaimedJobs, & models updated

--- a/CustomTattooDesign_MobileApp/src/app/pages/artist-landing/artist-landing.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/artist-landing/artist-landing.page.html
@@ -6,9 +6,8 @@
 
 <ion-content>
 
-  <ion-button expand="block">Unclaimed Jobs</ion-button> <br>
+  <ion-button expand="block" (click)="goUnclaimed()">Unclaimed Jobs</ion-button> <br>
   <ion-button expand="block">Your Jobs</ion-button> <br>
-
   <app-logout></app-logout>
 
 </ion-content>
