--- a/CustomTattooDesign_MobileApp/src/app/pages/unclaimed-jobs/unclaimed-jobs.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/unclaimed-jobs/unclaimed-jobs.page.html
@@ -6,40 +6,38 @@
 
 <ion-content>
 
-  <ion-card>
+  <ion-card *ngIf="unclaimedJobs.length == 0" class="ion-text-center">
+  <ion-card-header>
+    <ion-card-title >There Are Currently No Available Jobs</ion-card-title><br>
+  </ion-card-header>
+  <ion-card-content>
+    <ion-label>Please Check Back Later</ion-label>
+  </ion-card-content>
+  </ion-card>
+
+  <ion-card *ngFor="let job of unclaimedJobs">
     <ion-card-header>
       <ion-button fill="outline" style="float: right">View</ion-button>
-      <ion-card-subtitle>Job #5768</ion-card-subtitle>
-      <ion-card-title>Yoshi Down Under</ion-card-title>
+      <ion-card-subtitle>Job #{{job.jobId}}</ion-card-subtitle>
+      <ion-card-title>{{job.title}}</ion-card-title>
     </ion-card-header>
 
     <ion-card-content>
       <ion-label>
-        Keep close to Nature's heart... and break clear away, once in awhile,
-        and climb a mountain or spend a week in the woods. Wash your spirit clean.
+        {{job.description}}
       </ion-label> <br><br>
 
       <ion-item color="none">
-        <ion-label>Customer: Andy Popa</ion-label>
+        <ion-label>Customer: {{job.customerName}}</ion-label>
       </ion-item>
 
       <ion-item color="none">
-        <ion-label>Commision: $69.00</ion-label>
+        <ion-label>Commission: ${{job.commission}}</ion-label>
       </ion-item>
 
       <ion-item color="none">
-        <ion-label>Status: Needs Designer</ion-label>
+        <ion-label>Status: {{job.status}}</ion-label>
       </ion-item> <br>
     </ion-card-content>
   </ion-card>
-
-  <!--<ion-segment>
-    <ion-segment-button>
-      <ion-label>A thing</ion-label>
-    </ion-segment-button>
-    <ion-segment-button>
-      <ion-label>Another thing</ion-label>
-    </ion-segment-button>
-  </ion-segment>-->
-
 </ion-content>
