--- a/CustomTattooDesign_MobileApp/src/app/pages/artist-login/artist-login.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/artist-login/artist-login.page.html
@@ -3,6 +3,9 @@
     <ion-title>
       Custom Tattoo Design
     </ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button text="Back"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
