--- a/CustomTattooDesign_MobileApp/src/app/pages/claimed-jobs/claimed-jobs.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/claimed-jobs/claimed-jobs.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>claimed-jobs</ion-title>
+    <ion-title>Your Jobs</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button text="Back"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -32,7 +35,7 @@
     
     <ion-card *ngFor="let job of inProgressJobs">
       <ion-card-header>
-        <ion-button fill="outline" style="float: right">View</ion-button>
+        <ion-button fill="outline" style="float: right" (click)="viewJobDetails(job)">View</ion-button>
         <ion-card-subtitle>Job #{{job.jobId}}</ion-card-subtitle>
         <ion-card-title>{{job.title}}</ion-card-title>
       </ion-card-header>
@@ -69,7 +72,7 @@
     
     <ion-card *ngFor="let job of approvedJobs">
       <ion-card-header>
-        <ion-button fill="outline" style="float: right">View</ion-button>
+        <ion-button fill="outline" style="float: right" (click)="viewJobDetails(job)">View</ion-button>
         <ion-card-subtitle>Job #{{job.jobId}}</ion-card-subtitle>
         <ion-card-title>{{job.title}}</ion-card-title>
       </ion-card-header>
@@ -106,7 +109,7 @@
     
     <ion-card *ngFor="let job of completedJobs">
       <ion-card-header>
-        <ion-button fill="outline" style="float: right">View</ion-button>
+        <ion-button fill="outline" style="float: right" (click)="viewJobDetails(job)">View</ion-button>
         <ion-card-subtitle>Job #{{job.jobId}}</ion-card-subtitle>
         <ion-card-title>{{job.title}}</ion-card-title>
       </ion-card-header>
