--- a/CustomTattooDesign_MobileApp/src/app/pages/artist-landing/artist-landing.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/artist-landing/artist-landing.page.html
@@ -48,7 +48,7 @@
     </ion-card-header>
     <ion-card-content>
       <ion-item color="none">
-        <ion-label>Jobs Taken: {{artist.lifetime.refunds}}</ion-label>
+        <ion-label>Jobs Taken: {{artist.lifetime.jobsTaken}}</ion-label>
       </ion-item>
 
       <ion-item color="none">
