sprint-3 front-end completed

--- a/CustomTattooDesign_MobileApp/src/app/pages/artist-landing/artist-landing.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/artist-landing/artist-landing.page.html
@@ -5,10 +5,10 @@
 </ion-header>
 
 <ion-content>
-
   <ion-button expand="block" (click)="goUnclaimed()">Unclaimed Jobs</ion-button> <br>
   <ion-button expand="block" (click)="goClaimed()">Your Jobs</ion-button> <br>
-  
+  <ion-button expand="block" (click)="goConversations()">Your Messages</ion-button> <br>
+
   <ion-card color="success">
     <ion-card-header> 
       <ion-card-title>Last 30 Days</ion-card-title>
