--- a/CustomTattooDesign_MobileApp/src/app/pages/home/home.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/home/home.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <h1>Welcome to Custom Tattoo Design</h1>
+  <br /><h1 class="ion-text-center">Welcome to Custom Tattoo Design</h1><br /><br /><br />
   <ion-button expand="block" (click)="goArtistLogin()">Artist Login</ion-button> <br>
   <ion-button expand="block">Customer Login</ion-button> <br>
   <ion-button expand="block">Request a Design</ion-button>
