--- a/CustomTattooDesign_MobileApp/src/app/pages/job-details/job-details.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/job-details/job-details.page.html
@@ -4,6 +4,11 @@
     <ion-buttons slot="start">
       <ion-back-button text="Back"></ion-back-button>
     </ion-buttons>
+    <ion-buttons slot="primary">
+      <ion-button (click)="goConversation()">
+        <ion-icon slot="icon-only" name="chatbubble-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
