update artist & customer pages directory structure

--- a/CustomTattooDesign_MobileApp/src/app/pages/home/home.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/home/home.page.html
@@ -7,6 +7,7 @@
 <ion-content>
   <br /><h1 class="ion-text-center">Welcome to Custom Tattoo Design</h1><br /><br /><br />
   <ion-button expand="block" (click)="goArtistLogin()">Artist Login</ion-button> <br>
-  <ion-button expand="block">Customer Login</ion-button> <br>
-  <ion-button expand="block">Request a Design</ion-button>
+  <ion-button expand="block" (click)="goCustomerCodeEntry()">Customer Login</ion-button> <br>
+  <ion-button expand="block" (click)="goRequestDesign()">Request a Design</ion-button>
+
 </ion-content>
