--- a/CustomTattooDesign_MobileApp/src/app/pages/artist-pages/job-details/job-details.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/artist-pages/job-details/job-details.page.html
@@ -4,7 +4,7 @@
     <ion-buttons slot="start">
       <ion-back-button text="Back"></ion-back-button>
     </ion-buttons>
-    <ion-buttons slot="primary">
+    <ion-buttons slot="primary" *ngIf="job.status != 'Needs Designer'"> <!-- only display chat for claimed jobs -->
       <ion-button (click)="goConversation()">
         <ion-icon slot="icon-only" name="chatbubble-outline"></ion-icon>
       </ion-button>
