--- a/CustomTattooDesign_MobileApp/src/app/pages/customer-pages/customer-design-details/customer-design-details.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/customer-pages/customer-design-details/customer-design-details.page.html
@@ -65,5 +65,7 @@
 
     <hr color="white">
   </ion-grid>
+
+  <ion-button expand="block" (click)="goViewDesignImages()">View Design Images</ion-button>
 </ion-content>
 
