--- a/CustomTattooDesign_MobileApp/src/app/pages/customer-pages/customer-design-drawing/customer-design-drawing.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/customer-pages/customer-design-drawing/customer-design-drawing.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>customer-design-drawing</ion-title>
+    <ion-title>Draw Over Design</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button text="Back"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
