--- a/CustomTattooDesign_MobileApp/src/app/pages/customer-pages/customer-landing/customer-landing.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/customer-pages/customer-landing/customer-landing.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <h1>Welcome {{job.customerName}}!</h1>
+  <h1>Welcome {{job.customerName}}!</h1><br /><br />
 
   <ion-button *ngIf="job.status != 'queued'" expand="block" (click)="goConversation()">Your Conversation</ion-button> <br>
   <ion-button expand="block" (click)="goDesignDetails()">Your Design's Details</ion-button> <br>
