--- a/CustomTattooDesign_MobileApp/src/app/pages/artist-pages/artist-design-images/artist-design-images.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/artist-pages/artist-design-images/artist-design-images.page.html
@@ -10,6 +10,10 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
+  <ion-toolbar *ngIf="job.status != 'Needs Designer'">
+    <input type="file" name="files" (change)="updateFiles($event.target)" ngDefaultControl />
+    <ion-button expand="block" (click)="submitDesignDraftImage()">Upload Design Draft</ion-button>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
@@ -29,8 +33,8 @@
     </ion-card-header>
 
     <ion-card-content>
+      <!-- <img class="design_image" src="designImage.image" /> -->
       <img [src]='getImageSrcString(designImage)'>
-      <ion-button expand="block" (click)="goDrawOnDesign(designImage)">Draw On Design</ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
