bug-fixes & customer upload drawings finished

--- a/CustomTattooDesign_MobileApp/src/app/modules/design-request-components/dr-skeleton/dr-skeleton.component.html
+++ b/CustomTattooDesign_MobileApp/src/app/modules/design-request-components/dr-skeleton/dr-skeleton.component.html
@@ -8,7 +8,7 @@
   </ion-segment-button>
 </ion-segment>
 
-<div style="margin-left:50px;margin-top:30px;" *ngIf="segmentValue == 'front'">
+<div style="margin-top:30px;" *ngIf="segmentValue == 'front'">
   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="326.08px" height="594.77px" viewBox="0 0 326.08 594.77" style="enable-background: new 0 0 326.08 594.77;" xml:space="preserve">
     <path id="f_r_hand" class="inactive" (click)="clickBodyPart($event)" d="M284.28,277.8c4.41-2.99,8.82-5.98,13.23-8.97c2.25,4.86,5.32,6.09,9.46,8.65
       c4.42,2.74,17.12,16.07,17.65,19.68c0.02,0.11,0.02,0.21,0.03,0.3c-2.99-2.44-6.07-4.78-9.29-6.85c-0.45-0.29-0.92-0.56-1.4-0.8
@@ -133,7 +133,7 @@
   </svg>
 </div>
 
-<div style="margin-left:50px;margin-top:30px;" *ngIf="segmentValue == 'back'">
+<div style="margin-top:30px;" *ngIf="segmentValue == 'back'">
   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="307.41px" height="595.64px" viewBox="0 0 307.41 595.64" style="enable-background:new 0 0 307.41 595.64;" xml:space="preserve">
     <path id="b_r_hand" class="inactive" (click)="clickBodyPart($event)" d="M295.15,290.54c-2.41-4.38-5.95-6.9-8.09-10.91c-4.08,4.23-9.94,7.19-15.64,9.15c0.19,1.42,0.17,2.86,0.17,6.26
       c0,6.63,2.77,14.27,3.22,17.2c0.45,2.93,1.44,19.26,2.85,20.88c2.42,2.78,2.77-16.86,3.67-17.02c0.91-0.15,5.4,21.36,6.91,21.52
