--- a/CustomTattooDesign_MobileApp/src/app/pages/customer-pages/customer-landing/customer-landing.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/customer-pages/customer-landing/customer-landing.page.html
@@ -1,10 +1,13 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Customer Landing</ion-title>
+    <ion-buttons slot="start">
+      <ion-button (click)="logout()">Logout</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   <h1>Welcome {{job.customerName}}!</h1><br /><br />
 
   <ion-button *ngIf="job.status != 'queued'" expand="block" (click)="goConversation()">Your Conversation</ion-button> <br>
