--- a/CustomTattooDesign_MobileApp/src/app/pages/artist-pages/artist-message/artist-message.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/artist-pages/artist-message/artist-message.page.html
@@ -5,7 +5,7 @@
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="primary">
-      <ion-button (click)="presentDesignsOptionSheet()">
+      <ion-button (click)="goViewDesignImages()">
         <ion-icon slot="icon-only" name="images-outline"></ion-icon>
       </ion-button>
       <ion-button (click)="refreshConversation()">
