--- a/CustomTattooDesign_MobileApp/src/app/pages/artist-pages/artist-landing/artist-landing.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/artist-pages/artist-landing/artist-landing.page.html
@@ -9,22 +9,22 @@
   <ion-button expand="block" (click)="goClaimed()">Your Jobs</ion-button> <br>
   <ion-button expand="block" (click)="goConversations()">Your Messages</ion-button> <br>
 
-  <ion-card color="success">
+  <ion-card>
     <ion-card-header> 
       <ion-card-title>Last 30 Days</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <ion-item color="none">
+      <ion-item>
         <ion-label>Jobs Taken: {{artist.last30Days.jobsTaken}}</ion-label>
       </ion-item>
 
-      <ion-item color="none">
+      <ion-item>
         <ion-label>Refunds: {{artist.last30Days.refunds}}</ion-label>
       </ion-item> <br>
     </ion-card-content>
   </ion-card> <br>
 
-  <ion-card color="success">
+  <ion-card>
     <ion-card-header> 
       <ion-card-title>Current Job Limit</ion-card-title>
     </ion-card-header>
@@ -33,7 +33,7 @@
     </ion-card-content>
   </ion-card> <br>
 
-  <ion-card color="success">
+  <ion-card>
     <ion-card-header> 
       <ion-card-title>Alert Messages</ion-card-title>
     </ion-card-header>
@@ -42,20 +42,20 @@
     </ion-card-content>
   </ion-card> <br>
   
-  <ion-card color="success">
+  <ion-card>
     <ion-card-header> 
       <ion-card-title>Lifetime</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <ion-item color="none">
+      <ion-item>
         <ion-label>Jobs Taken: {{artist.lifetime.refunds}}</ion-label>
       </ion-item>
 
-      <ion-item color="none">
+      <ion-item>
         <ion-label>Earnings: ${{artist.lifetime.earnings}}</ion-label>
       </ion-item>
 
-      <ion-item color="none">
+      <ion-item>
         <ion-label>Refunds: {{artist.lifetime.refunds}}</ion-label>
       </ion-item> <br>
     </ion-card-content>
