--- a/CustomTattooDesign_MobileApp/src/app/pages/customer-pages/customer-design-drawing/customer-design-drawing.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/customer-pages/customer-design-drawing/customer-design-drawing.page.html
@@ -5,8 +5,8 @@
       <ion-back-button text="Back"></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button (click)="test()">
-        <ion-icon slot="icon-only" name="person-circle"></ion-icon>
+      <ion-button (click)="confirmUploadImage()">
+        <ion-icon slot="icon-only" name="chevron-up-circle-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
