--- a/CustomTattooDesign_MobileApp/src/app/pages/customer-pages/customer-message/customer-message.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/customer-pages/customer-message/customer-message.page.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title style="text-align: center;">{{job.artistName}}</ion-title>
+    <ion-title style="text-align: center;">ARTIST_NAME</ion-title>
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="primary">
-      <ion-button (click)="goDesignImages()">
+      <ion-button (click)="presentDesignsOptionSheet()">
         <ion-icon slot="icon-only" name="images-outline"></ion-icon>
       </ion-button>
       <ion-button (click)="refreshConversation()">
