--- a/CustomTattooDesign_MobileApp/src/app/pages/artist-pages/unclaimed-jobs/unclaimed-jobs.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/artist-pages/unclaimed-jobs/unclaimed-jobs.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-card *ngIf="unclaimedJobs.length == 0 && loaded" class="ion-text-center">
+  <ion-card *ngIf="unclaimedJobs.length == 0" class="ion-text-center">
     <ion-card-header>
       <ion-card-title >There Are Currently No Available Jobs</ion-card-title><br>
     </ion-card-header>
