more bugfixes, fixed message styling

--- a/CustomTattooDesign_MobileApp/src/app/modules/design-request-components/dr-personal-info/dr-personal-info.component.html
+++ b/CustomTattooDesign_MobileApp/src/app/modules/design-request-components/dr-personal-info/dr-personal-info.component.html
@@ -14,7 +14,7 @@
     <ion-list-header>
         <ion-label>I identify as...</ion-label>
     </ion-list-header>
-    <ion-item>
+    <ion-item class="no-hover">
         <ion-label>Male</ion-label>
         <ion-radio slot="start" value="male" (ionBlur)="personalDetails.gender='male'"></ion-radio>
     </ion-item>
