--- a/CustomTattooDesign_MobileApp/src/app/modules/design-request-components/dr-skeleton/dr-skeleton.component.scss
+++ b/CustomTattooDesign_MobileApp/src/app/modules/design-request-components/dr-skeleton/dr-skeleton.component.scss
@@ -9,3 +9,11 @@
     clip-rule: evenodd;
     fill: #343c54;
 }
+
+.skeletonDiv {
+    display: inline-block;
+}
+
+.wrapper {
+    text-align: center;
+}
