--- a/CustomTattooDesign_MobileApp/src/app/pages/artist-pages/artist-landing/artist-landing.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/artist-pages/artist-landing/artist-landing.page.html
@@ -9,6 +9,8 @@
 
 <ion-content>
   <div class="ion-padding">
+    <h1>Welcome {{artist.firstName}} {{artist.lastName}}!</h1><br /><br />
+
     <ion-button expand="block" (click)="goUnclaimed()">Unclaimed Jobs</ion-button> <br>
     <ion-button expand="block" (click)="goClaimed()">Your Jobs</ion-button> <br>
     <ion-button expand="block" (click)="goConversations()">Your Messages</ion-button> <br>
