--- a/CustomTattooDesign_MobileApp/src/app/pages/artist-pages/job-details/job-details.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/artist-pages/job-details/job-details.page.html
@@ -62,9 +62,9 @@
     </ion-row>
 
     <hr>
-  </ion-grid>
+  </ion-grid> <br>
 
-  <ion-button expand="block" (click)="goViewDesignImages()">View Design Images</ion-button>
+  <ion-button expand="block" (click)="goViewDesignImages()">View Design Images</ion-button> <br>
 
   <ion-button expand="block" *ngIf="job.status == 'Needs Designer'" (click)="claimJob(job)">Claim</ion-button>
 </ion-content>
