--- a/CustomTattooDesign_MobileApp/src/app/pages/customer-pages/customer-code-entry/customer-code-entry.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/customer-pages/customer-code-entry/customer-code-entry.page.html
@@ -8,6 +8,9 @@
 </ion-header>
 
 <ion-content>
+  <br>
+  <img src="../../../assets/logo.png" alt="Logo">
+  <br>
   <ion-card>
     <ion-card-header>
       <ion-card-title>Login</ion-card-title>
