--- a/CustomTattooDesign_MobileApp/src/app/pages/home/home.page.html
+++ b/CustomTattooDesign_MobileApp/src/app/pages/home/home.page.html
@@ -5,7 +5,8 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <br /><h1 class="ion-text-center">Welcome to Custom Tattoo Design</h1><br /><br /><br />
+  <img src="../../../assets/logo.png" alt="Logo">
+  <br>
   <ion-button expand="block" (click)="goArtistLogin()">Artist Login</ion-button> <br>
   <ion-button expand="block" (click)="goCustomerCodeEntry()">Customer Login</ion-button> <br>
   <ion-button expand="block" (click)="goRequestDesign()">Request a Design</ion-button>
